kube.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: ns-2048

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ns-2048
  name: deployment-2048
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: 2048-pod
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: 2048-pod
    spec:
      containers:
      - image: alexwhen/docker-2048
        imagePullPolicy: Always
        name: 2048-pod
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  namespace: ns-2048
  name: service-2048
spec:
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
  selector:
    app.kubernetes.io/name: 2048-pod

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ns-2048
  name: deployment-php
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: php-pod
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: php-pod
    spec:
      containers:
      - image: bbenns/php-hello-world
        imagePullPolicy: Always
        name: php-pod
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  namespace: ns-2048
  name: service-php
spec:
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
  selector:
    app.kubernetes.io/name: php-pod

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ns-2048
  name: ingress-testing
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:770964819483:certificate/1233e25e-d638-4385-bb0a-dfaf4a63ef2c
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    # external-dns.alpha.kubernetes.io/hostname: >
    #   game.shoesmart-research.com,
    #   products.shoesmart-research.com
spec:
  rules:
  - host: game.shoesmart-research.com
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: service-2048
            port:
              number: 80
  - host: products.shoesmart-research.com
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: service-php
            port:
              number: 80
